<resources>
    <string name="app_name">Todos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">Enter Email</string>
    <string name="todo_task">Todo Task</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet">Not Registered Yet?</string>
    <string name="add_task">Add Task</string>
    <string name="add">add</string>
</resources>